<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/camera_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_flip_camera"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:contentDescription="@string/cd_flip_camera"
        app:icon="@drawable/ic_flip_camera"
        app:iconTint="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_flash"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="@dimen/spacing_small"
        android:contentDescription="@string/cd_flash_control"
        app:icon="@drawable/flash_off_24"
        app:iconTint="@android:color/white"
        app:layout_constraintTop_toTopOf="@id/btn_flip_camera"
        app:layout_constraintBottom_toBottomOf="@id/btn_flip_camera"
        app:layout_constraintEnd_toStartOf="@id/btn_flip_camera" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/camera_controls_margin_bottom" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_shutter"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_shutter"
        android:background="@drawable/shutter_background"
        android:scaleType="centerInside"
        android:contentDescription="@string/cd_shutter_button"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/btn_gallery"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/spacing_large"
        android:src="@drawable/ic_gallery"
        android:contentDescription="@string/cd_gallery_shortcut"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintTop_toTopOf="@id/btn_shutter"
        app:layout_constraintBottom_toBottomOf="@id/btn_shutter"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/container_camera_modes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/spacing_medium"
        app:layout_constraintBottom_toTopOf="@id/btn_shutter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_mode_video"
            style="@style/CameraModeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_mode_video" />

        <TextView
            android:id="@+id/tv_mode_photo"
            style="@style/CameraModeTextStyle.Selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_mode_photo" />

        <TextView
            android:id="@+id/tv_mode_video_note"
            style="@style/CameraModeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_mode_video_note" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>